--- a/skin/hrsale_assets/css/hrsale/xin_hrsale.rtl.css
+++ b/skin/hrsale_assets/css/hrsale/xin_hrsale.rtl.css
@@ -8,7 +8,7 @@
     background-color: #394350 !important;
 }
 .h1, .h2, .h3, .h4, .h5, .h6, body, h1, h2, h3, h4, h5, h6 {
-    font-family: Poppins, sans-serif !important;
+  font-family: 'Tajawal', sans-serif !important;  
 }
 .info-box {
     min-height: 100px !important;
